# Paperplane-Screenshots

./: README.md  main.c  main_window.glade  meson.build  screenshot.c  settings.glade  success.glade
